--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php": ">=7.1.0",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "ext-simplexml": "*"
     },
     "autoload": {
         "psr-4": {
@@ -29,9 +30,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7"
+        "phpunit/phpunit": "^7",
+        "squizlabs/php_codesniffer": "^3.3",
+        "protonlabs/php-coding-standard": "^1.0"
     },
     "scripts": {
+        "phpcs": "phpcs lib",
         "unit": "phpunit --testdox --colors=always"
     }
 }
