--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_script:
 script:
   - vendor/bin/phpunit --coverage-clover=coverage.xml
 
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+#after_success:
+#  - bash <(curl -s https://codecov.io/bash)
