--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
     "require-dev": {
         "phpunit/phpunit": "^7",
         "squizlabs/php_codesniffer": "^3.3",
-        "protonlabs/php-coding-standard": "^1.0"
+        "protonlabs/php-coding-standard": "^1.0",
+        "friendsofphp/php-cs-fixer": "^2.13"
     },
     "scripts": {
         "phpcs": "phpcs lib",
