--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ProtonMail/libsieve-php",
+    "name": "protonlabs/libsieve-php",
     "description": "libsieve-php is a library to manage and modify sieve (RFC5228) scripts.",
     "keywords": ["sieve", "filters", "mail"],
     "type": "library",
