--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "libsieve-php is a library to manage and modify sieve (RFC5228) scripts.",
     "keywords": ["sieve", "filters", "mail"],
     "type": "library",
-    "license": "GPLv3",
+    "license": "GPL-3.0-or-later",
     "homepage": "https://sourceforge.net/projects/libsieve-php/",
     "support": {
         "issues": "https://github.com/ProtonMail/libsieve-php/issues"
