--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
-        "squizlabs/php_codesniffer": "^3.3",
-        "protonlabs/php-coding-standard": "^1.0"
+        "squizlabs/php_codesniffer": "*",
+        "protonlabs/php-coding-standard": "^2.1"
     },
     "scripts": {
         "phpcs": "phpcs lib",
