--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
-        "squizlabs/php_codesniffer": "*",
+        "squizlabs/php_codesniffer": "^3.5",
         "protonlabs/php-coding-standard": "^2.1"
     },
     "scripts": {
