--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
 language: php
 
 php:
-  - 7.1
-  - 7.2
-  - 7.3
-#  - nightly
+  - 8.0
+  - 8.1
 
 before_script:
   - travis_retry composer selfupdate
   - travis_retry composer i --no-interaction --prefer-source
 
 script:
+  - vendor/bin/psalm
   - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
