--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         }
     ],
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=8.0",
         "ext-mbstring": "*",
         "ext-simplexml": "*"
     },
@@ -40,9 +40,10 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^7",
+        "phpunit/phpunit": "^9",
         "squizlabs/php_codesniffer": "^3.5",
-        "protonlabs/php-coding-standard": "^3.0"
+        "protonlabs/php-coding-standard": "^4.0",
+        "vimeo/psalm": "^4.22"
     },
     "scripts": {
         "phpcs": "phpcs lib",
